[package]
name = "darkly-macros"
version = "0.2.0"
authors = ["Nick Cameron <nick@ncameron.org>"]
repository = "https://github.com/nrc/darkly"
description = "macros to support the Darkly crate"
license = "Apache-2.0/MIT"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.0"
syn = { version = "0.15.0", features = ["full", "extra-traits"] }
proc-macro2 = "0.4.21"
