[package]
name = "darkly-macros"
version = "0.2.0"
authors = ["Nick Cameron <nick@ncameron.org>"]
repository = "https://github.com/nrc/darkly"
description = "macros to support the Darkly crate"
license = "Apache-2.0/MIT"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.0"
proc-macro-hack = "0.5"

